--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <header><a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
       <div class="profile">
-        <h1 class="site-title abel uppercase text-center">Web Designer <span>Sigyong Kim</span></h1><img src="./images/img_profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+        <h1 class="site-title abel uppercase text-center">Web Designer <span>Sigyong Kim</span></h1><img src="./images/photo.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
         <p>大阪府在住のWebデザイナー、金　是慶（Kim Sigyong)です。<br>情報を正しく伝達し、ユーザーの行動を呼び起こすためのデザインにこだわり、ウェブサイトの企画から運用までワンストップで手がけています。</p>
       </div>
     </header>
@@ -42,55 +42,55 @@
       </section><!--works-->
       <section id="works">
         <h2 class="text-center">Works</h2>
-        <div class="works-box"><a href="#"><img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+        <div class="works-box"><a href="#"><img src="./images/works1.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>株式会社きらめき コーポレートサイト</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_card.jpg" alt="きらめき太郎様 名刺デザイン">
+        <div class="works-box"><a href="#"><img src="./images/works2.jpg" alt="きらめき太郎様 名刺デザイン">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>きらめき太郎様 名刺</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+        <div class="works-box"><a href="#"><img src="./images/works3.jpg" alt="WordPressオリジナルテーマ">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>ブログデザイン</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_card.jpg" alt="きらめき太郎様 名刺デザイン">
+        <div class="works-box"><a href="#"><img src="./images/works2.jpg" alt="きらめき太郎様 名刺デザイン">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>きらめき太郎様 名刺</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+        <div class="works-box"><a href="#"><img src="./images/works3.jpg" alt="WordPressオリジナルテーマ">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>ブログデザイン</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+        <div class="works-box"><a href="#"><img src="./images/works1.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>株式会社きらめき コーポレートサイト</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+        <div class="works-box"><a href="#"><img src="./images/works3.jpg" alt="WordPressオリジナルテーマ">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>ブログデザイン</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+        <div class="works-box"><a href="#"><img src="./images/works1.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>株式会社きらめき コーポレートサイト</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_card.jpg" alt="きらめき太郎様 名刺デザイン">
+        <div class="works-box"><a href="#"><img src="./images/works2.jpg" alt="きらめき太郎様 名刺デザイン">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>きらめき太郎様 名刺</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
